--- a/theme.css
+++ b/theme.css
@@ -1,5 +1,5 @@
 p{
-color:darkblue
-outline-style:double
-outline-color:powderblue
+color:darkblue;
+outline-style:double;
+outline-color:powderblue;
 }
