--- a/theme.css
+++ b/theme.css
@@ -1,7 +1,7 @@
 h1{
   color:purple;
-  outline-style:dash
-  outline-color:ultraviolet
+  outline-style:dash;
+  outline-color:ultraviolet;
 }
   
   
