--- a/theme.css
+++ b/theme.css
@@ -12,7 +12,7 @@ h1{
   
 
 p{
-background-color:orange
+background-color:orange;
 color:darkblue;
 outline-style:double;
 outline-color:powderblue;
