--- a/theme.css
+++ b/theme.css
@@ -1,7 +1,10 @@
 body{
 background-color:mintcream;
 }
-
+code {
+  display: block;
+  white-space: pre-wrap   
+}
 h1{
   background-color:limegreen;
   color:purple;
