--- a/theme.css
+++ b/theme.css
@@ -5,6 +5,9 @@ code {
   display: block;
   white-space: pre-wrap   
 }
+footer { 
+    display: block;
+}
 h1{
   background-color:limegreen;
   color:purple;
