--- a/theme.css
+++ b/theme.css
@@ -8,14 +8,14 @@ code {
 }
 footer { 
     display: block;
-    padding: 1cm;
+    padding: 1px;
 }
 h1{
   background-color:limegreen;
   color:purple;
   outline-style:solid;
   outline-color:lightgreen;
-  padding: 2cm;
+  padding: 2px;
 }
 .content{
 padding: 2cm;
@@ -30,5 +30,5 @@ background-color:orange;
 color:darkblue;
 outline-style:double;
 outline-color:powderblue;
-padding: 3cm;
+padding: 3px;
 }
