--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,4 @@
-
+t
 body{
 background-color:mintcream;
 }
@@ -8,14 +8,14 @@ code {
 }
 footer { 
     display: block;
-    padding: 1px;
+    padding: 20pt;
 }
 h1{
   background-color:limegreen;
   color:purple;
   outline-style:solid;
   outline-color:lightgreen;
-  padding: 2px;
+  padding: 20pt;
 }
 .content{
 padding: 2cm;
@@ -30,5 +30,5 @@ background-color:orange;
 color:darkblue;
 outline-style:double;
 outline-color:powderblue;
-padding: 3px;
+padding: 30pt;
 }
